--- a/css/style-login-register.css
+++ b/css/style-login-register.css
@@ -47,7 +47,7 @@ html{
    justify-content: space-between;
    gap:1.5rem;
    z-index: 1000;
-   background-color: var(--light-bg);
+   background-color: var(--red);
    margin:0 auto;
 }
 
@@ -57,7 +57,7 @@ html{
 }
 
 .message i{
-   color:var(--red);
+   color:var(--white);
    font-size: 2.5rem;
    cursor: pointer;
 }
